--- a/userChrome.css
+++ b/userChrome.css
@@ -4,7 +4,7 @@ File userChrome.css is for changing the `chrome` of the browser
 
 /* Green Letters for active tab */
 tab[selected="true"] {
-  color: rgba(199, 234, 70, 0.75) !important;
+  /* color: rgba(199, 234, 70, 0.75) !important; */
 }
 
 tab {
@@ -12,7 +12,7 @@ tab {
 }
 
 /*
- * Shameless copy
+ * Shameless copy from somewhere on the net
  * Hide bookmark toolbar, view when hover
  */
 #urlbar {
@@ -32,10 +32,10 @@ tab {
 }
 
 #PersonalToolbar:not([customizing]) {
+  order: 2 !important
   margin-bottom: calc(2px - var(--uc-bm-height) - 2 * var(--uc-bm-padding));
   transform: rotateX(90deg);
   transform-origin: top;
-  /* transition: transform 135ms linear 600ms !important; */
   transition: transform 60 linear 100 !important;
   z-index: 1;
 }
